Basic Data Validation is now working. Will enhance soon.

--- a/Group Project1/TinyCollege/TinyCollege.csproj
+++ b/Group Project1/TinyCollege/TinyCollege.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="containsAny.cs" />
     <Compile Include="frmEnrollment.cs">
       <SubType>Form</SubType>
     </Compile>
